--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -20,7 +20,7 @@
     "- Prepare the laws data\n",
     "- Create embeddings for the data\n",
     "- Create embedding for the query\n",
-    "- Find most relevant text sections\n",
+    "- Find most relevant text sections (by calculating distance between the query embedding and text embeddings)\n",
     "- Send query with the question and most relevant sections\n",
     "- Get query answer\n"
    ]
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c4d5e9f1",
    "metadata": {},
    "outputs": [],
@@ -82,12 +82,13 @@
     "import time\n",
     "from vector_database import save_index\n",
     "from vector_database import load_index\n",
-    "from vector_database import strings_ranked_by_relatedness_vector"
+    "from vector_database import strings_ranked_by_relatedness_vector\n",
+    "from answer_rater import rank_answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "486c3cda",
    "metadata": {},
    "outputs": [],
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a94e28f8",
    "metadata": {},
    "outputs": [],
@@ -112,64 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3689441b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>nr</th>\n",
-       "      <th>text</th>\n",
-       "      <th>link</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>VVS</td>\n",
-       "      <td>para1</td>\n",
-       "      <td>§ 1.\\nVabariigi Valitsuse pädevus\\n(1) Vabarii...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/VVS#para1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  type     nr                                               text  \\\n",
-       "0  VVS  para1  § 1.\\nVabariigi Valitsuse pädevus\\n(1) Vabarii...   \n",
-       "\n",
-       "                                        link  \n",
-       "0  https://www.riigiteataja.ee/akt/VVS#para1  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head(1)"
    ]
@@ -192,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d94f50db",
    "metadata": {},
    "outputs": [],
@@ -206,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "880fd492",
+   "id": "a0876465",
    "metadata": {},
    "source": [
     "When splitting the paragraphs, it is important to still have the context of the paragraph, which is why the title of the paragraph is split from the text and later added to the subsections of the paragraph."
@@ -214,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "aeadfa64",
    "metadata": {},
    "outputs": [],
@@ -234,78 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "77f01e3f",
+   "execution_count": null,
+   "id": "55b18473",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>nr</th>\n",
-       "      <th>text</th>\n",
-       "      <th>link</th>\n",
-       "      <th>title</th>\n",
-       "      <th>split_text</th>\n",
-       "      <th>token_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>VVS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>(1) Vabariigi Valitsus teostab täidesaatvat ri...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/VVS#para1</td>\n",
-       "      <td>Vabariigi Valitsuse pädevus</td>\n",
-       "      <td>Vabariigi Valitsus teostab täidesaatvat riigi...</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  type nr                                               text  \\\n",
-       "0  VVS  1  (1) Vabariigi Valitsus teostab täidesaatvat ri...   \n",
-       "\n",
-       "                                        link                        title  \\\n",
-       "0  https://www.riigiteataja.ee/akt/VVS#para1  Vabariigi Valitsuse pädevus   \n",
-       "\n",
-       "                                          split_text  token_count  \n",
-       "0   Vabariigi Valitsus teostab täidesaatvat riigi...           39  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head(1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7af4e73d",
+   "id": "04b2f1e9",
    "metadata": {},
    "source": [
     "Now, we must separate paragraphs, which have more tokens than 1600 and perform additional cleaning. This code will split the longer paragraphs by sections if there are subsections of sections, like (3.1) for example."
@@ -313,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e62e576a",
    "metadata": {
     "scrolled": true
@@ -335,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc66a96",
+   "id": "ae6ad60f",
    "metadata": {},
    "source": [
     "This code is used in case there still be paragraphs with more tokens than 1600. This will split the paragraph by list enumeration elements, so 1) ..., 2) ... ."
@@ -343,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d356ecfe",
    "metadata": {
     "scrolled": true
@@ -363,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9108e98e",
    "metadata": {
     "scrolled": false
@@ -377,30 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "eac2a0c3",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Seadus VVS paragrahv 1. Pealkiri: Vabariigi Valitsuse pädevus Sisu: Vabariigi Valitsus teostab täidesaatvat riigivõimu Eesti Vabariigi põhiseaduse ja seaduste alusel.'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[\"concatenated\"].iloc[0]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "289a6a38",
+   "id": "13327fc5",
    "metadata": {},
    "source": [
     "### Calculating the embeddings"
@@ -408,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0b062103",
    "metadata": {},
    "outputs": [],
@@ -418,64 +295,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "082a7fe7",
+   "execution_count": null,
+   "id": "dbf0802b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Seadus VVS paragrahv 1. Pealkiri: Vabariigi Valitsuse pädevus Sisu: Vabariigi Valitsus teostab täidesaatvat riigivõimu Eesti Vabariigi põhiseaduse ja seaduste alusel.'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "laws[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d870fc21",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 0 to 999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculate embeddings\n",
     "\n",
     "##\n",
     "##DO NOT RUN UNLESS NEED TO CREATE NEW EMBEDDINGS (THIS CODE COSTS ABT 2 DOLLARS)\n",
     "\n",
-    "EMBEDDING_MODEL = \"text-embedding-ada-002\"  # OpenAI's best embeddings as of Apr 2023\n",
-    "BATCH_SIZE = 1000  \n",
-    "\n",
-    "law_strings = laws.tolist()\n",
-    "\n",
-    "embeddings = []\n",
-    "for batch_start in range(0, len(law_strings), BATCH_SIZE):\n",
-    "    batch_end = batch_start + BATCH_SIZE\n",
-    "    batch = law_strings[batch_start:batch_end]\n",
-    "    print(f\"Batch {batch_start} to {batch_end-1}\")\n",
-    "    response = openai.Embedding.create(model=EMBEDDING_MODEL, input=batch)\n",
-    "    for i, be in enumerate(response[\"data\"]):\n",
-    "        assert i == be[\"index\"]  # double check embeddings are in same order as input\n",
-    "    batch_embeddings = [e[\"embedding\"] for e in response[\"data\"]]\n",
-    "    embeddings.extend(batch_embeddings)\n",
-    "\n",
-    "result = pd.DataFrame({\"text\": law_strings, \"embedding\": embeddings})"
+    "#EMBEDDING_MODEL = \"text-embedding-ada-002\"  # OpenAI's best embeddings as of Apr 2023\n",
+    "#BATCH_SIZE = 1000  \n",
+    "#\n",
+    "#law_strings = laws.tolist()\n",
+    "#\n",
+    "#embeddings = []\n",
+    "#for batch_start in range(0, len(law_strings), BATCH_SIZE):\n",
+    "#    batch_end = batch_start + BATCH_SIZE\n",
+    "#    batch = law_strings[batch_start:batch_end]\n",
+    "#    print(f\"Batch {batch_start} to {batch_end-1}\")\n",
+    "#    response = openai.Embedding.create(model=EMBEDDING_MODEL, input=batch)\n",
+    "#    for i, be in enumerate(response[\"data\"]):\n",
+    "#        assert i == be[\"index\"]  # double check embeddings are in same order as input\n",
+    "#    batch_embeddings = [e[\"embedding\"] for e in response[\"data\"]]\n",
+    "#    embeddings.extend(batch_embeddings)\n",
+    "#\n",
+    "#result = pd.DataFrame({\"text\": law_strings, \"embedding\": embeddings})"
    ]
   },
   {
@@ -493,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2e7e9a4a",
    "metadata": {
     "scrolled": true
@@ -513,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ff6683ef",
    "metadata": {},
    "outputs": [],
@@ -523,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e25178f7",
    "metadata": {},
    "outputs": [],
@@ -533,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "76e943a8",
    "metadata": {},
    "outputs": [],
@@ -546,12 +404,12 @@
    "id": "4b06cdc7",
    "metadata": {},
    "source": [
-    "The spacial distance cosine is calculated here."
+    "The spacial distance cosine is calculated here. The cosine distance ranges from -1 to 1, where 1 indicates that the vectors are identical and -1 that they are completely dissimilar. When calculating relatedness, it is common to subtract"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "9e53bc35",
    "metadata": {},
    "outputs": [
@@ -645,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "669f548a",
    "metadata": {},
    "outputs": [],
@@ -663,7 +521,7 @@
     "    token_budget: int\n",
     ") -> str:\n",
     "    \"\"\"Return a message for GPT, with relevant source texts pulled from a dataframe.\"\"\"\n",
-    "    strings, relatednesses = strings_ranked_by_relatedness_vector(query, index,df)\n",
+    "    strings, relatednesses = strings_ranked_by_relatedness_vector(query,EMBEDDING_MODEL, index,df,openai)\n",
     "    introduction = 'Use the following part of the law to answer the subsequent question. Try to find the best answer.' \\\n",
     "    'Formulate the answer including the law name and paragraph number'\\\n",
     "    'The answer should be a coherent sentence. If the answer cannot be found in the laws, write '\\\n",
@@ -708,18 +566,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "92a144de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ask(\"Kuidas astub minister ametisse?\")"
+    "question = \"Kuidas astub minister ametisse?\"\n",
+    "answer = ask(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f931e00f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hinnang vastusele: I would rate this answer a 10 as it directly answers the question and provides a specific legal reference to support the answer.'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank_answer(question,answer,openai)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f931e00f",
+   "id": "b8d424d9",
    "metadata": {},
    "outputs": [],
    "source": []
