--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0876465",
+   "id": "e457bcb0",
    "metadata": {},
    "source": [
     "When splitting the paragraphs, it is important to still have the context of the paragraph, which is why the title of the paragraph is split from the text and later added to the subsections of the paragraph."
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b18473",
+   "id": "eb2af4b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04b2f1e9",
+   "id": "47a38b0e",
    "metadata": {},
    "source": [
     "Now, we must separate paragraphs, which have more tokens than 1600 and perform additional cleaning. This code will split the longer paragraphs by sections if there are subsections of sections, like (3.1) for example."
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae6ad60f",
+   "id": "b85226a3",
    "metadata": {},
    "source": [
     "This code is used in case there still be paragraphs with more tokens than 1600. This will split the paragraph by list enumeration elements, so 1) ..., 2) ... ."
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13327fc5",
+   "id": "6d4ecad2",
    "metadata": {},
    "source": [
     "### Calculating the embeddings"
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf0802b",
+   "id": "1b745f83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
    "id": "4b06cdc7",
    "metadata": {},
    "source": [
-    "The spacial distance cosine is calculated here. The cosine distance ranges from -1 to 1, where 1 indicates that the vectors are identical and -1 that they are completely dissimilar. When calculating relatedness, it is common to subtract"
+    "The spacial distance cosine is calculated here. The cosine distance ranges from -1 to 1, where 1 indicates that the vectors are identical and -1 that they are completely dissimilar. When calculating relatedness, it is common to subtract the cosine distance from 1, to better reflect the relatedness from 0 to 2, where 0 would mean not related at all and 2 meaning perfect similarity."
    ]
   },
   {
@@ -595,14 +595,6 @@
    "source": [
     "rank_answer(question,answer,openai)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8d424d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
