--- a/xmlparser.ipynb
+++ b/xmlparser.ipynb
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,10 +1660,7 @@
     ") -> str:\n",
     "    \"\"\"Return a message for GPT, with relevant source texts pulled from a dataframe.\"\"\"\n",
     "    strings, relatednesses, refs = strings_ranked_by_relatedness(query,df, top_n=15)\n",
-    "    introduction = 'Use the following paragraphs to answer the subsequent question. Try to find the best answer.' \\\n",
-    "    'Formulate the answer including the law name and paragraph number'\\\n",
-    "    'The answer should be a coherent sentence. If the answer cannot be found in the laws, write '\\\n",
-    "    '\"Ei leidnud seadustest küsimusele vastust, proovige küsimus ümber sõnastada\"'\n",
+    "    introduction = \"Answer based on the context below otherwise say that you can\\'t answer.\"\n",
     "    question = f\"\\n\\nQuestion: {query}\"\n",
     "    message = introduction\n",
     "    \n",
@@ -1701,7 +1698,7 @@
     "                allrefs.append(further_refs)\n",
     "            \n",
     "            # Add ref text to message\n",
-    "            next_article = f'\\n\\Paragraph:\\n\"\"\"\\n{ref_text}\\n\"\"\"'\n",
+    "            next_article = f'{ref_text}\\n'\n",
     "            \n",
     "            # If the current message length exceeds the token budget, terminate the process\n",
     "            tokens_so_far += num_tokens(next_article, model=model)\n",
@@ -1712,7 +1709,7 @@
     "        if tokens_so_far > token_budget:\n",
     "            break\n",
     "\n",
-    "        next_article = f'\\n\\nSeaduse lõik:\\n\"\"\"\\n{string}\\n\"\"\"'\n",
+    "        next_article = f'{string}\\n'\n",
     "        tokens_so_far += num_tokens(next_article, model=model)\n",
     "        if tokens_so_far > token_budget:\n",
     "            break\n",
@@ -1734,8 +1731,8 @@
     "    if print_message:\n",
     "        print(message)\n",
     "    messages = [\n",
-    "        {\"role\": \"system\", \"content\": \"Sa vastad Eesti seaduste andmebaasi küsimustele.\"},\n",
-    "        {\"role\": \"user\", \"content\": message},\n",
+    "        {\"role\": \"system\", \"content\": message},\n",
+    "        {\"role\": \"user\", \"content\": query},\n",
     "    ]\n",
     "    response = openai.ChatCompletion.create(\n",
     "        model=model,\n",
@@ -1748,52 +1745,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Use the following paragraphs to answer the subsequent question. Try to find the best answer.Formulate the answer including the law name and paragraph numberThe answer should be a coherent sentence. If the answer cannot be found in the laws, write \"Ei leidnud seadustest küsimusele vastust, proovige küsimus ümber sõnastada\"\n",
-      "\\Paragraph:\n",
-      "\"\"\"\n",
-      "§15. Ministri asendamine (1) Kui minister ei saa haiguse või muu takistuse tõttu ajutiselt oma ülesandeid täita, paneb peaminister korraldusega tema ülesanded mõnele teisele ministrile.(2) Kui ministri volitused on lõppenud käesoleva seaduse § 12 1. lõike punktides 1–5 sätestatud juhtudel, paneb peaminister oma korraldusega tema ülesanded mõnele teisele ministrile kuni uue ministri ametisse nimetamiseni.(3) Asendav minister kirjutab dokumentidele alla oma ametinimetuse ning lisab asendatava ministri ametinimetuse koos sõnaga «ülesannetes».\n",
-      "\"\"\"\n",
-      "\n",
-      "Seaduse lõik:\n",
-      "\"\"\"\n",
+      "Answer based on the context below otherwise say that you can't answer.§15. Ministri asendamine (1) Kui minister ei saa haiguse või muu takistuse tõttu ajutiselt oma ülesandeid täita, paneb peaminister korraldusega tema ülesanded mõnele teisele ministrile.(2) Kui ministri volitused on lõppenud käesoleva seaduse § 12 1. lõike punktides 1–5 sätestatud juhtudel, paneb peaminister oma korraldusega tema ülesanded mõnele teisele ministrile kuni uue ministri ametisse nimetamiseni.(3) Asendav minister kirjutab dokumentidele alla oma ametinimetuse ning lisab asendatava ministri ametinimetuse koos sõnaga «ülesannetes».\n",
       "§7. Muudatused Vabariigi Valitsuse koosseisus (1) Muudatused ametisse astunud Vabariigi Valitsuse koosseisus on:1) ministri ametist vabastamine;2) uue ministri ametisse nimetamine;3) ministri nimetamine juhtima mitut ministeeriumi, välja arvatud käesoleva seaduse §-s 15 nimetatud juhul;4) mitut ministeeriumi juhtima nimetatud ministri vabastamine ühe ministeeriumi juhtimisest, välja arvatud käesoleva seaduse §-s 15 nimetatud juhul.(2) Minister, kes on Vabariigi Valitsuse antud koosseisus ametisse astudes andnud ametivande, ei tee seda uuesti tema nimetamisel juhtima teist ministeeriumi.(3) Muudatuse ametisse nimetatud Vabariigi Valitsuse koosseisus teeb Vabariigi President peaministri ettepaneku saamisest kolme päeva jooksul. Kui Riigikogu on avaldanud ministrile umbusaldust, vabastab Vabariigi President ministri ametist viivitamata pärast Riigikogu esimehelt asjakohase teate saamist.(4) Muudatus ametisse nimetatud Vabariigi Valitsuse koosseisus tehakse Vabariigi Presidendi otsusega, mis avaldatakse Riigi Teatajas.\n",
-      "\"\"\"\n",
-      "\n",
-      "Seaduse lõik:\n",
-      "\"\"\"\n",
       "10) määrab ministeeriumi valitsemisalas olevate riigiasutuste struktuuri, asjaajamise ja töökorralduse, välja arvatud juhud, kui see on sätestatud ministri määrusest kõrgemalseisva õigusaktiga;11) kinnitab ministeeriumi valitsemisalas olevate valitsusasutuste teenistuskohtade koosseisud, kui seaduses ei ole sätestatud teisiti;12) esitab ettenähtud korras Vabariigi Valitsusele ettepanekuid ministeeriumi valitsemisala küsimuste otsustamiseks;13) annab Vabariigi Valitsusele aru ministeeriumi tegevusest;13_1) tagab sisekontrolli süsteemi rakendamise ja siseaudiitori kutsetegevuse korraldamise ministeeriumis ja ministeeriumi valitsemisalas olevates valitsusasutustes ning valitsusasutuste hallatavates riigiasutustes;13_2) peab vähemalt kord aastas Riigikogus ettekande, milles annab ülevaate oma vastutusvaldkonna tegevustest ja arengust;14) täidab muid ülesandeid, mis talle on pandud seaduse või Vabariigi Valitsuse määruse, korralduse või peaministri korraldusega.(2) Kui ministri valitsemisalasse kuuluv küsimus puudutab ka teiste ministeeriumide valitsemisalasid või kui asju otsustatakse kokkuleppel teiste ministritega, kooskõlastab minister otsuse teiste ministritega. Kui kokkulepet ei saavutata, esitatakse küsimus otsustamiseks Vabariigi Valitsusele.(3) Ministeeriumi struktuuriüksused, samuti tema valitsemisalas olevad asutused pöörduvad Vabariigi Valitsuse poole ministri kaudu.(4) Minister vastutab riigivara säilimise ja heaperemeheliku kasutamise eest ning korraldab seda kooskõlas riigivaraseadusega.\n",
-      "\"\"\"\n",
-      "\\Paragraph:\n",
-      "\"\"\"\n",
       "§12. Ministri volituste lõppemine (1) Ministri volitused lõpevad:1) tema tagasiastumisel;2) tema surma korral;3) peaministri ettepanekul Vabariigi Presidendi otsuse alusel;4) talle Riigikogu poolt umbusalduse avaldamise korral;5) tema suhtes süüdimõistva kohtuotsuse jõustumisel;6) Vabariigi Valitsuse tagasiastumisel.(2) Minister esitab tagasiastumisavalduse peaministrile, kes edastab selle ühe kuu jooksul Vabariigi Presidendile. Peaministril on õigus tagasiastumisavaldus kolme päeva jooksul tagasi lükata. Kui minister esitab tagasiastumisavalduse uuesti, edastab peaminister avalduse Vabariigi Presidendile.(2_1) Erandina käesoleva paragrahvi lõikes 2 sätestatust loetakse minister tagasiastumisavalduse esitanuks tema valimisel Euroopa Parlamendi liikmeks, kui ta ei teavita kümne päeva jooksul, arvates valimistulemuste väljakuulutamise päevast, Vabariigi Valimiskomisjoni, et ta soovib jätkata oma senises ametis ja Euroopa Parlamendi liikme mandaadist loobuda.(3) Ministri surmast teatab peaminister Vabariigi Presidendile viivitamata.(4) Peaministril on õigus teha Vabariigi Presidendile ettepanek vabastada minister ametist.(5) Ministrile umbusalduse avaldamisest teatab Riigikogu esimees Vabariigi Presidendile ja peaministrile viivitamata.(6) Ministri kohta tehtud süüdimõistva kohtuotsuse jõustumisest teatab kohus Vabariigi Presidendile ja peaministrile viivitamata.(7) Kui minister vabastatakse ametist käesoleva paragrahvi 1. lõike punktides 1, 3 ja 4 nimetatud juhtudel, kohaldatakse käesoleva seaduse § 7 3. lõiget. Ministri kohta tehtud süüdimõistva kohtuotsuse jõustumise korral vabastab Vabariigi President ta ametist kohtuotsuse jõustumise päevast kohe pärast käesoleva paragrahvi 6. lõikes nimetatud teate saamist. Ministri surma korral loetakse tema volitused lõppenuks surmapäevale järgnevast päevast.(8) Ministri ametist vabastamine vormistatakse ja avaldatakse käesoleva seaduse § 7 4. lõikes sätestatud korras.\n",
-      "\"\"\"\n",
-      "\n",
-      "Seaduse lõik:\n",
-      "\"\"\"\n",
       "§15. Ministri asendamine (1) Kui minister ei saa haiguse või muu takistuse tõttu ajutiselt oma ülesandeid täita, paneb peaminister korraldusega tema ülesanded mõnele teisele ministrile.(2) Kui ministri volitused on lõppenud käesoleva seaduse § 12 1. lõike punktides 1–5 sätestatud juhtudel, paneb peaminister oma korraldusega tema ülesanded mõnele teisele ministrile kuni uue ministri ametisse nimetamiseni.(3) Asendav minister kirjutab dokumentidele alla oma ametinimetuse ning lisab asendatava ministri ametinimetuse koos sõnaga «ülesannetes».\n",
-      "\"\"\"\n",
-      "\n",
-      "Seaduse lõik:\n",
-      "\"\"\"\n",
       "§5. Vabariigi Valitsuse ja ministri ametisse nimetamine (1) Vabariigi Valitsuse nimetab ametisse Vabariigi President kolme päeva jooksul, arvates päevast, kui põhiseaduse § 89 2. lõike alusel Riigikogult valitsuse moodustamiseks volituse saanud peaministrikandidaat või põhiseaduse § 89 6. lõike alusel Riigikogu ülesseatud peaministrikandidaat on esitanud talle valitsuskoosseisu.(1_1) Riigikogult valitsuse moodustamiseks volituse saamise järel esitab peaministrikandidaat ettepanekus Vabariigi Presidendile ministrite ja nende ametinimetuste loetelu, mis on koostatud, lähtudes moodustatava valitsuse poliitilistest prioriteetidest ja efektiivse valitsemise vajadustest, mida peaministrikandidaat on tutvustanud Riigikogule ettekandes tulevase valitsuse moodustamise aluste kohta. Ministri ametinimetus peab viitama ministri pädevusele ja vastutusvaldkonnale.(2) Ministri nimetab ametisse Vabariigi President peaministrilt sellekohase ettepaneku saamisest kolme päeva jooksul.(3) Vabariigi Valitsus või minister nimetatakse ametisse Vabariigi Presidendi otsusega, mis avaldatakse Riigi Teatajas.\n",
-      "\"\"\"\n",
-      "\n",
-      "Seaduse lõik:\n",
-      "\"\"\"\n",
       "§95. Ministri teenistusliku järelevalve pädevus (1) Minister valvab ministeeriumi struktuuriüksuste, ministeeriumi valitsemisala valitsusasutuste ja nende ametiisikute, samuti muude ministeeriumi hallatavate riigiasutuste tegevuse seaduslikkuse ja otstarbekuse üle.(2) Minister tunnistab kehtetuks ministeeriumi kantsleri, osakonnajuhatajate, ametite ja inspektsioonide peadirektorite ja teiste ministeeriumi ametiisikute, samuti muude käesoleva paragrahvi 1. lõikes nimetatud riigiasutuste juhtide akte ja toiminguid, mis ei ole vastavuses põhiseaduse, muude seaduste, Vabariigi Valitsuse määruste ja korralduste ning ministri määruste ja korraldustega.(3) Ministril on õigus tunnistada kehtetuks käesoleva paragrahvi 2. lõikes nimetatud ametiisikute ja hallatavate riigiasutuste juhtide akte ja toiminguid nende ebaotstarbekuse motiivil vastavalt käesoleva seaduse §-le 100.(4) Teenistusliku järelevalve ministeeriumi ametiisikute toimingute üle võib minister panna ministeeriumi kantslerile.\n",
-      "\"\"\"\n",
-      "\n",
-      "Seaduse lõik:\n",
-      "\"\"\"\n",
       "§28. Vabariigi Valitsuse määruse vormistamine (3) Vabariigi Valitsuse määrusele kirjutavad alla peaminister, asjaomane minister ja riigisekretär. Peaministrit asendav minister kirjutab määrusele alla oma ametinimetuse ja sõnad «peaministri ülesannetes». Ministrit asendav minister kirjutab alla käesoleva seaduse § 15 3. lõikes sätestatud korras. Juhul kui asjaomane minister on eriarvamusel, lisatakse tema kirjalik seisukoht Vabariigi Valitsuse istungi protokollile.\n",
-      "\"\"\"\n",
+      "\n",
       "\n",
       "Question: Millisel juhul pole ministri mitme ministeeriumi juhtima määramine muudatus valitsuse koosseisus?\n"
      ]
@@ -1801,10 +1768,10 @@
     {
      "data": {
       "text/plain": [
-       "'Ei leidnud seadustest küsimusele vastust, proovige küsimus ümber sõnastada.'"
+       "'Ministri mitme ministeeriumi juhtima määramine ei ole muudatus valitsuse koosseisus, välja arvatud juhul, kui see on sätestatud käesoleva seaduse § 15-s nimetatud juhtudel. (§7. Muudatused Vabariigi Valitsuse koosseisus, punkt 3)'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
